    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pasto" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/alumno"
                    android:textAlignment="center"
                    android:textColor="@color/cardview_dark_background"
                    android:textColorLink="@color/cardview_dark_background"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textDes2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="Camilo Caviedes"
                            android:textColor="@color/cardview_dark_background"
                            android:textColorLink="@color/cardview_dark_background"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textDes3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/inge"
                            android:textColor="@color/cardview_dark_background"
                            android:textColorLink="@color/cardview_dark_background"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textDes4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="Android Studio"
                            android:textColor="@color/cardview_dark_background"
                            android:textColorLink="@color/cardview_dark_background"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>

                <Button
                    android:id="@+id/salir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salir" />

            </LinearLayout>


        </ScrollView>



    </LinearLayout>
